# image-converter

./: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
.tauri-keys/: private.key  private.key.pub
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: .gitkeep  README.md  download-imagemagick.ps1
src-tauri/src/: image_processor.rs  lib.rs
src/components/: BatchProgress.tsx  ConversionControls.tsx  DragDropOverlay.tsx  FileList.tsx  SettingsPanel.tsx  UpdateChecker.tsx
src/store/: imageStore.ts
